se unificaron las declaraciones de todas las funciones en un unico archivo de cabecera, se añadio la funcionalidad de registrar y mostrar el historial de puntaje

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,7 +48,8 @@
       "sstream": "cpp",
       "stdexcept": "cpp",
       "streambuf": "cpp",
-      "typeinfo": "cpp"
+      "typeinfo": "cpp",
+      "locale": "cpp"
    },
    "C_Cpp.intelliSenseEngineFallback": "enabled",
    "C_Cpp.default.compilerPath": "D:\\Programas\\MSYS2\\ucrt64\\bin\\gcc.exe"
