--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,22 +1,25 @@
 {
    "version": "2.0.0",
    "tasks": [
-       {
-           "label": "build",
-           "type": "shell",
-           "command": "g++",
-           "args": [
-               "-g",
-               "main.cpp",
-               "-o",
-               "main.exe"
-           ],
-           "group": {
-               "kind": "build",
-               "isDefault": true
-           },
-           "problemMatcher": ["$gcc"],
-           "detail": "Tarea generada por el usuario"
-       }
+      {
+         "label": "Compilar C++",
+         "type": "shell",
+         "command": "g++",
+         "args": [
+             "-g",
+             "main.cpp",
+             "./functions/**.cpp",
+             "-o",
+             "main"
+         ],
+         "group": {
+             "kind": "build",
+             "isDefault": true
+         },
+         "problemMatcher": [
+             "$gcc"
+         ],
+         "detail": "Tarea generada por el usuario."
+     }
    ]
 }
